--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-svg": "^13.2.0",
+    "react-native-vector-icons": "^10.0.2",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
